--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 * {
-    background-color: rosybrown;
+
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+body{
+    background-color: rgb(224, 189, 189);
 }
