--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<h2>{{ title }}</h2>
-<app-product-container [product]="animalsCard"></app-product-container>
+<app-header></app-header>
+<router-outlet></router-outlet>
