--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
 <div class="landing-block">
-    <img src="/public/assets/logo.png" alt="logo">
+    <a routerLink="products"><img src="/assets/logo.png" alt="logo BebouStore"></a>
     <div class="landing-links">
-      <a>Continuer vers BebouStore</a>
+      <a routerLink="products">Continuer vers BebouStore</a>
     </div>
   </div>
