--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
 @for (product of products; track product.name) {
   <app-product-container [product]="product"></app-product-container>
 }
