--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,8 @@
 <header>
     <h2>Bebou Store</h2>
+    <nav>
+        <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Accueil</a>
+        <a routerLink="../products" routerLinkActive="active">Articles</a>
+        <a routerLink="../cart" routerLinkActive="active">Panier</a>
+    </nav>
 </header>
