cart service + cart component under construction!

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,1 +1,10 @@
 <app-header></app-header>
+@for (item of cart; track item.id) {
+    <div class="product-container">
+        <img [src]="getProduct(item.id)?.imgUrl" alt="">
+        <span>{{getProduct(item.id)?.name}}</span>
+    <p>Quantité : {{ item.quantity }}
+    </p>
+    <button class="button" (click)="removeFromCart(item.id)">Rétirer du panier</button>
+    </div>
+}
