--- a/src/app/components/landing-page/landing-page.component.scss
+++ b/src/app/components/landing-page/landing-page.component.scss
@@ -23,3 +23,13 @@
     height: 500px;
     width: auto;
   }
+
+  .button {
+    font-size: 20px;
+    margin-top: 20px;
+    height: 40px;
+    width: 150;
+    border-radius: 10px;
+    background-color: rgb(224, 189, 189);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+}
