--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,72 @@
 
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+@media (max-width: 768px) {
+    .product-container {
+        width: 100%;
+        height: auto;
+        margin: 10px 0;
+    }
 
+    .img-container {
+        width: 100%;
+        height: auto;
+    }
+
+    .button {
+        width: 100%;
+    }
+}
+
+html, body {
+    width: 85%;
+    margin: 0 auto;
+}
 body{
+    background-color: rgb(226, 203, 203);
+}
+
+.product-container {
+    background-color: rgb(245, 184, 184);
+    border: 2px solid black;
+    border-radius: 15px;
+    display: inline-block;
+    justify-content: center;
+    grid-template-columns: repeat(8, 1fr);
+    height: 385px;
+    width: 250px;
+    margin: 15px 5px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    vertical-align: top;
+    img {
+        border-radius: 7px;
+        margin: 10px auto;
+        max-width: 90%;
+        max-height: 90%;
+        display: block;
+    }
+}
+
+.img-container {
+    width: 245px;
+    height: 170px;
+    padding: auto;
+}
+
+.product-container:hover {
+    background-color: rgb(250, 199, 199);
+}
+
+.button {
+    height: 40px;
+    width: 150;
+    border-radius: 10px;
     background-color: rgb(224, 189, 189);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+}
+
+.button:active {
+    scale: 0.95;
+    transition: 0.1s ease;
+    background-color: rgb(211, 228, 207);
 }
