--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <h2>Bebou Store</h2>
     <nav>
         <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Accueil</a>
-        <a routerLink="../products" routerLinkActive="active">Articles</a>
-        <a routerLink="../cart" routerLinkActive="active">Panier</a>
+        <a routerLink="/products" routerLinkActive="active">Articles</a>
+        <a routerLink="/cart" routerLinkActive="active">Panier</a>
     </nav>
 </header>
