--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,6 +1,7 @@
+<app-header></app-header>
 <div class="landing-block">
     <a routerLink="products"><img src="/assets/logo.png" alt="logo BebouStore"></a>
     <div class="landing-links">
-      <a routerLink="products">Continuer vers BebouStore</a>
+      <button class="button" (click)="goToProducts()">Continuer vers BebouStore</button>
     </div>
   </div>
