--- a/src/app/components/product-container/product-container.component.html
+++ b/src/app/components/product-container/product-container.component.html
@@ -2,10 +2,10 @@
     <div class="img-container">
         <img [src]="product.imgUrl" alt="">
     </div>
-    <h4 class="price">{{ (product.price / 100).toFixed(2) | currency : "EUR" }}</h4>
+    <h4 class="price">{{ product.price | currency : "EUR" }}</h4>
     @if (product.retailPrice != product.price) {
         <div class="retail-price-info">Prix conseillé:  
-            <span class="retail-price price">{{ (product.retailPrice / 100) | number: "1.0-2"  }}</span>
+            <span class="retail-price price">{{ product.retailPrice | number: "1.0-2"  }}</span>
             <span>€  <b>{{((product.price/product.retailPrice)-1) | percent}}</b></span>
         </div>}
          @else { <br>}
