Recap OK, form à faire pour les orders

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>Bebou Store</h1>
+    <h1>Crafty Store</h1>
     <nav>
         <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Accueil</a>
         <a routerLink="/products" routerLinkActive="active">Articles</a>
