--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="landing-block">
-    <a routerLink="products"><img src="/assets/logo.png" alt="logo BebouStore"></a>
+    <a routerLink="products"><img src="assets/wood-411643_1920.jpg" alt="logo CraftStore"></a>
     <div class="landing-links">
-      <button class="button" (click)="goToProducts()">Continuer vers BebouStore</button>
+      <button class="button" (click)="goToProducts()">Continuer vers Crafty Store</button>
     </div>
   </div>
