--- a/src/app/components/product-container/product-container.component.html
+++ b/src/app/components/product-container/product-container.component.html
@@ -1,4 +1,4 @@
-<div class="box product-container">
+<div class="product-container">
     <div class="img-container">
         <img [src]="product.imgUrl" alt="">
     </div>
