--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -1,10 +1,9 @@
 .product-container {
-    height: auto;
-    max-height: 450px;
+    height: 400px;
     justify-content: center;
     align-items: center;
     img {
-        max-height: 225px;
+        height: 168px;
     }
 }
 
@@ -28,9 +27,18 @@
 }
 
 .left-sidebar {
-    width: 70%;
+    border-top: 1px solid rgba(145, 145, 145, 0.397);
+    border-right: 1px solid rgba(145, 145, 145, 0.397);
+    border-bottom: 1px solid rgba(145, 145, 145, 0.397);
+    border-radius: 10px;
+    width: 60%;
+    padding-right: 25px;
 }
 
 .right-sidebar {
-    margin-left: 50px;
+    padding-left: 25px;
+    border-top: 1px solid rgba(145, 145, 145, 0.397);
+    border-left: 1px solid rgba(145, 145, 145, 0.397);
+    border-bottom: 1px solid rgba(145, 145, 145, 0.397);
+    border-radius: 10px;
 }
