--- a/src/app/components/landing-page/landing-page.component.scss
+++ b/src/app/components/landing-page/landing-page.component.scss
@@ -19,10 +19,7 @@
     color: black;
   }
 
-  img {
-    height: 500px;
-    width: auto;
-  }
+
 
   .button {
     font-size: 20px;
@@ -32,4 +29,13 @@
     border-radius: 10px;
     background-color: rgb(224, 189, 189);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+}
+
+
+img {
+  width: 800px;
+  height: fit-content;
+  display: flex;
+  margin: 0 auto;
+  z-index: -1;
 }
