--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,20 @@ body{
     }
 }
 
+.box {
+    background-color: rgb(208, 209, 159);
+    border: 2px solid black;
+    border-radius: 15px;
+    display: inline-block;
+    justify-content: flex-end;
+    grid-template-columns: repeat(8, 1fr);
+    height: auto;
+    width: 100%;
+    margin: 15px 5px;
+    padding: 20px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
 .img-container {
     width: 245px;
     height: 170px;
