--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+
+html {
+  @include mat.theme((
+    color: (
+      theme-type: light,
+      primary: mat.$azure-palette,
+      tertiary: mat.$blue-palette,
+    ),
+    typography: Roboto,
+    density: 0,
+  ));
+}/* You can add global styles to this file, and also import other style files */
 * {
 
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -24,6 +39,7 @@
 html, body, nav {
     width: 85%;
     margin: 0 auto;
+    justify-self: center;
 }
 body{
     background-color: #F5F5F0;
@@ -92,3 +108,5 @@ body{
     transition: 0.1s ease;
     background-color: rgb(211, 228, 207);
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
