--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="landing-block">
-    <a routerLink="products"><img src="assets/wood-411643_1920.jpg" alt="logo CraftStore"></a>
+    <a routerLink="products"><img src="assets/logoCraftyStore.png" alt="logo CraftStore"></a>
     <div class="landing-links">
       <button class="button" (click)="goToProducts()">Continuer vers Crafty Store</button>
     </div>
