--- a/src/app/components/order-confirmation/order-confirmation.component.scss
+++ b/src/app/components/order-confirmation/order-confirmation.component.scss
@@ -5,7 +5,7 @@ h1 {
 }
 
 .box {
-    width: 40%;
+    width: 35%;
     display: flex;
     justify-content: left;
     align-items: center;
@@ -18,8 +18,32 @@ table {
     width: 100%;
     td {
         border: 1px solid rgba(73, 72, 72, 0.555);
+        padding: 5px 5px;
+    }
+    tr {
+        padding: 5px 5px;
     }
     th {
         border: 1px solid rgba(73, 72, 72, 0.555);
+        padding: 5px 5px;
     }
 }
+
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .example-full-width {
+    width: 100%;
+  }
+
+  .submit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    font-size: 18px;
+    font-weight: 600;
+  }
