Test toast en cours

--- a/src/app/components/product-creator/product-creator.component.html
+++ b/src/app/components/product-creator/product-creator.component.html
@@ -26,22 +26,23 @@
     </form>
   </div>
 
-  <form class="box" (ngSubmit)="deleteProduct(productId)" #dataForm="ngForm">
+  <form class="box" #dataForm="ngForm">
     <fieldset>
       <legend>ID du produit à supprimer</legend>
       <mat-form-field class="input-product-creator">
-        <input matInput type="number" name="name" [(ngModel)]="productId" placeholder="Id du produit" required />
+        <input matInput type="number" name="id" [(ngModel)]="productId" placeholder="Id du produit" required />
       </mat-form-field>
       <br>
-      <button class="button" (click)="togglePopup()">Supprimer</button>
+      <button class="button" (click)="togglePopup($event)">Supprimer</button>
    
     <div class="box popup" [ngClass]="{ 'popup-toggle': isPopupVisible}">
       <h2 class="popup-message-confirmation">Vous êtes sur le point de supprimer un produit. Êtes-vous certain?</h2>
-      <button class="button popup-message-confirmation" type="submit" [disabled]="!dataForm.valid" (click)="togglePopup()">Oui, supprimer</button>
-      <button class="button popup-message-confirmation" (click)="togglePopup()">Non</button>
+      <button class="button popup-message-confirmation" type="submit"  (click)="deleteProduct(productId)">Oui, supprimer</button>
+      <button class="button popup-message-confirmation" (click)="togglePopup($event)">Non</button>
     </div>
   </fieldset>
   </form>
+  <button class="button" (click)="showSuccess()">Test Toast</button>
 </div>
 
 
