correction erreurs consoles

--- a/src/app/components/product-creator/product-creator.component.html
+++ b/src/app/components/product-creator/product-creator.component.html
@@ -42,7 +42,7 @@
     </div>
   </fieldset>
   </form>
-  <button class="button" (click)="showSuccess()">Test Toast</button>
+  <button class="button" (click)="showSuccess('')">Test Toast</button>
 </div>
 
 
