--- a/src/app/components/order-confirmation/order-confirmation.component.scss
+++ b/src/app/components/order-confirmation/order-confirmation.component.scss
@@ -47,3 +47,9 @@ table {
     font-size: 18px;
     font-weight: 600;
   }
+
+  .order-recap {
+    display: block;
+    align-items: center;
+    text-align: center ;
+  }
