--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,8 @@
 header {
     text-align: center;
-
+    background-color: #d3e6ce;
     border-bottom: 2px solid #333;
+    margin-top: 0px;
     margin-bottom: 30px;
 }
 
@@ -21,7 +22,6 @@ a {
 
 
   .card-btn {
-    background-color: rgb(178, 214, 255);
     height: 35px;
     border: 2px solid black;
     border-radius: 5px;
