--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,7 +72,7 @@ body{
     background-color: #d3e6ce;
     border: 2px solid black;
     border-radius: 15px;
-    display: inline-block;
+    display: block;
     justify-content: flex-end;
     grid-template-columns: repeat(8, 1fr);
     height: auto;
