style header + interface order

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,7 @@
 <header>
-    <h1>Crafty Store</h1>
+    <div class="title-container">
+        <span class="website-title">Crafty Store</span>
+    </div>
     <nav>
         <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Accueil</a>
         <a routerLink="/products" routerLinkActive="active">Articles</a>
