--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -41,4 +41,5 @@
     border-left: 1px solid rgba(145, 145, 145, 0.397);
     border-bottom: 1px solid rgba(145, 145, 145, 0.397);
     border-radius: 10px;
+    width: auto;
 }
