--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,9 +1,20 @@
 header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     text-align: center;
     background-color: #d3e6ce;
     border-bottom: 2px solid #333;
+    border-right: 2px solid #333;
+    border-left: 2px solid #333;
+    border-radius: 0px 0px 10px 10px;
     margin-top: 0px;
     margin-bottom: 30px;
+    padding-left: 15px;
+    padding-right: 15px;
+    min-height: 70px;
+    width: auto;
+    box-shadow: 0px 2px 1em #333;
 }
 
 a {
@@ -14,6 +25,19 @@ a {
       text-decoration: underline;
     }
   }
+
+  .title-container {
+    align-items: center;
+    align-content: center;
+    text-align: center;
+  }
+
+  .website-title {
+    font-weight: 700;
+    font-size: 35px;
+    text-align: center;
+  }
+
   
   .active {
     color: #666;
@@ -40,11 +64,8 @@ a {
   }
 
   .cart-logo {
-    display: flex;
-    justify-content: flex-end;
+    align-items: center;
     align-content: center;
-    position: relative;
-    top: 18px;
   }
 
 .cart-logo-quantity {
