--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,12 @@
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
 
+:root {
+    @include mat.table-overrides((
+      background-color: #d3e6ce,
+    ));
+  }
+
 html {
   @include mat.theme((
     color: (
@@ -37,11 +43,13 @@ html {
     }
 }
 
-html, body, nav {
+
+ body, html{
     width: 85%;
     margin: 0 auto;
     justify-self: center;
 }
+
 body{
     background-color: #F5F5F0;
 }
