--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -2,14 +2,14 @@
 <div class="sidebars">
     <div class="left-sidebar">
         <h1>Résumé de votre panier</h1>
-        @for (item of cart; track item.id) {
+        @for (item of cart; track item.product) {
             <div class="product-container">
-                    <img [src]="getProduct(item.id).imgUrl" alt="">
-                    <h3>{{getProduct(item.id).name}}</h3>
-                <div>Prix unitaire: {{getProduct(item.id).price | number: "1.0-2"}} €</div>
+                    <img [src]="item.product.imgUrl" alt="">
+                    <h3>{{item.product.name}}</h3>
+                <div>Prix unitaire: {{item.product.price | number: "1.0-2"}} €</div>
                 <p>Quantité : {{ item.quantity }}</p>
-                <div><b>Vous économisez {{getSavings(item.id) | number: "1.0-2"}} € </b></div>
-                <button class="button" (click)="removeFromCart(item.id)">Rétirer du panier</button>
+                <div><b>Vous économisez {{getSavings(item.product.id!) | number: "1.0-2"}} € </b></div>
+                <button class="button" (click)="removeFromCart(item.product.id!)">Rétirer du panier</button>
             </div>
         }
     </div>
