--- a/src/app/components/product-container/product-container.component.scss
+++ b/src/app/components/product-container/product-container.component.scss
@@ -46,6 +46,9 @@ h4 {
     align-items: center;
     display: flex;
     margin: 10px auto;
+    min-width: 70px;
+    height: 35px;
+    font-size:medium;
 }
 
 
