--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,10 +3,10 @@ header {
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    background-color: #d3e6ce;
-    border-bottom: 2px solid #333;
-    border-right: 2px solid #333;
-    border-left: 2px solid #333;
+    background-color: #d7e4d4;
+    border-bottom: 1.5px solid #333;
+    border-right: 1.5px solid #333;
+    border-left: 1.5px solid #333;
     border-radius: 0px 0px 10px 10px;
     margin-top: 0px;
     margin-bottom: 30px;
@@ -14,7 +14,7 @@ header {
     padding-right: 15px;
     min-height: 70px;
     width: auto;
-    box-shadow: 0px 2px 1em #333;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.349);
 }
 
 a {
@@ -48,7 +48,7 @@ a {
 
   .card-btn {
     height: 35px;
-    border: 2px solid black;
+    border: 1px solid black;
     border-radius: 5px;
     transition: all 0.3s;
     justify-content: center;
