--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 
 :root {
     @include mat.table-overrides((
-      background-color: #d3e6ce,
+      background-color: #d7e4d4,
     ));
   }
 
@@ -51,12 +51,11 @@ html {
 }
 
 body{
-    background-color: #F5F5F0;
+    background-color: #d7e4d4;
 }
 
 .product-container {
-    background-color: #d3e6ce;
-    border: 2px solid black;
+    background-color: #d7e4d4;
     border-radius: 15px;
     display: inline-block;
     justify-content: center;
@@ -65,7 +64,6 @@ body{
     width: 250px;
     margin: 15px 5px;
     padding: 5px 5px;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
     vertical-align: top;
     img {
         border-radius: 7px;
@@ -77,7 +75,7 @@ body{
 }
 
 .box {
-    background-color: #d3e6ce;
+    background-color: #d7e4d4;
     border: 2px solid black;
     border-radius: 15px;
     display: block;
@@ -87,7 +85,7 @@ body{
     width: 100%;
     margin: 15px 5px;
     padding: 20px;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.349);
 }
 
 .img-container {
@@ -97,7 +95,10 @@ body{
 }
 
 .product-container:hover {
-    background-color: #e5f7ce;
+    
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    background-color: #dee7da;
+    // border: 1.5px solid black;
 }
 
 .button {
@@ -105,12 +106,14 @@ body{
     width: 150;
     margin: 10px 10px;
     border-radius: 10px;
-    background-color: #D8B499;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    border: 1px solid black;
+    background-color: #dbc0ac;
 }
 
 .button:hover {
-    background-color: #F1D15A;
+    background-color: #dfcbbc;
+    
+    box-shadow: 0 2px 12px rgba(0, 0, 0, 0.3);
 }
 
 .button:active {
